--- a/index.ejs
+++ b/index.ejs
@@ -12,6 +12,7 @@
 
 <body>
 <div id="app"></div>
+<script type="text/javascript" src="/configuration.js" charset="utf-8"></script>
 <script type="text/javascript" src="/<%= htmlWebpackPlugin.files.js %>" charset="utf-8"></script>
 </body>
 </html>
