Loading added / table / rename component

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "style-helpers/variables";
-
 @import "style-helpers/path";
-
 @import "style-helpers/typografy";
+
+//Event
+@import "component/index";
 
