--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
+//Style helpers
 @import "style-helpers/variables";
 @import "style-helpers/path";
 @import "style-helpers/typografy";
-
 //Event
 @import "component/index";
 
